Flow Control in Java

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HelloKotlin428">
         <activity
+            android:name=".FlowControlKotlinActivity"
+            android:label="FlowControlKotlinActivity"></activity>
+        <activity
+            android:name=".FlowControlJavaActivity"
+            android:label="FlowControlJavaActivity" />
+        <activity
             android:name=".VariableKotlinActivity"
-            android:label="VariableKoltinActivity"></activity>
+            android:label="VariableKoltinActivity" />
         <activity
             android:name=".VariableJavaActivity"
             android:label="VariableJavaActivity" />
